# fastAPI_project

./: .gitignore  10_grad_cam.ipynb  1_save_load_model.ipynb  2_fastmain.py  3_infermain.py  4_pydantic.ipynb  5_streamlit.py  6_model.py  7_streamlit2.py  8_create_mnist_model.ipynb  9_practice_streamlit.py  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
